--- a/src/be/ac/ulb/infof307/g06/views/settingsViews/StorageView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/settingsViews/StorageView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="anchorPane" maxHeight="823.0" maxWidth="971.0" minHeight="823.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="823.0" maxWidth="971.0" minHeight="823.0"
             minWidth="971.0" xmlns="http://javafx.com/javafx/16"
             fx:controller="be.ac.ulb.infof307.g06.views.settingsViews.StorageViewController">
     <HBox layoutX="232.0" layoutY="299.0" spacing="40.0"/>
