--- a/src/be/ac/ulb/infof307/g06/views/settingsViews/helpViews/HelpMenuView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/settingsViews/helpViews/HelpMenuView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="823.0" prefWidth="971.0"
             xmlns="http://javafx.com/javafx/15.0.1"
