--- a/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/calendarViews/CalendarView.fxml
@@ -32,7 +32,7 @@
                 prefWidth="55.0" stylesheets="@../../resources/stylesheets/Button.css" text="&gt;"/>
     </HBox>
     <ScrollPane layoutY="128.0" prefHeight="710.0" prefWidth="1500.0">
-        <AnchorPane fx:id="anchorPaneDayView" minHeight="0.0" minWidth="0.0" prefHeight="710.0"
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="710.0"
                     prefWidth="1485.0">
             <VBox fx:id="weekViewBox" layoutX="-4.0" prefHeight="710.0" prefWidth="1500.0" spacing="40">
                 <WeekDayHeaderView fx:id="weekDays" prefHeight="29.0" prefWidth="1500.0"/>
