--- a/src/be/ac/ulb/infof307/g06/views/connectionViews/SignUpView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/connectionViews/SignUpView.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="425.0" prefWidth="700.0"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="layout" prefHeight="425.0" prefWidth="700.0"
             xmlns="http://javafx.com/javafx/15.0.1"
             fx:controller="be.ac.ulb.infof307.g06.views.connectionViews.SignUpViewController">
     <GridPane hgap="10.0" layoutY="-89.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
