--- a/src/be/ac/ulb/infof307/g06/views/mainMenuViews/MenuView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/mainMenuViews/MenuView.fxml
@@ -64,7 +64,7 @@
             </font>
             <graphic>
                 <ImageView fitHeight="83.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
-                    <Image url="@../../resources/icons/CALENDAR_INCON.png"/>
+                    <Image url="@../../resources/icons/CALENDAR_ICON"/>
                 </ImageView>
             </graphic>
             <cursor>
