--- a/src/be/ac/ulb/infof307/g06/views/projectViews/CloudView.fxml
+++ b/src/be/ac/ulb/infof307/g06/views/projectViews/CloudView.fxml
@@ -17,7 +17,7 @@
                          resizable="false" text="Files"/>
         </columns>
     </TableView>
-    <Button fx:id="downloadBtn" layoutX="246.0" layoutY="337.0" maxHeight="-Infinity" maxWidth="-Infinity"
+    <Button layoutX="246.0" layoutY="337.0" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#events" prefHeight="32.0"
             prefWidth="108.0" stylesheets="@../../resources/stylesheets/Button.css" text="Download" textFill="WHITE"
             AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="246.0" AnchorPane.rightAnchor="246.0"
